<?xml version="1.0"?>
<package>
  <name>husky_pid</name>
  <version>0.1.0</version>
  <description>The husky_pid package</description>

  <license>Amazon Software License</license>
  <maintainer email="adsnghw@amazon.com">Adi Singh</maintainer>
  <url type="website">https://aws.amazon.com/robomaker/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>husky_gazebo</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>husky_gazebo</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
